--- a/index.html
+++ b/index.html
@@ -1,71 +1,188 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página com Botões Interativos</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #f2f2f2;
-      transition: background-color 0.3s ease;
-    }
-    h1 {
-      color: #333;
-    }
-    button {
-      padding: 10px 20px;
-      margin: 10px 5px;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: transform 0.2s;
-    }
-    button:hover {
-      transform: scale(1.05);
-    }
-    .azul { background-color: #3498db; color: white; }
-    .verde { background-color: #2ecc71; color: white; }
-    .vermelho { background-color: #e74c3c; color: white; }
-    #mensagem {
-      margin-top: 30px;
-      font-size: 18px;
-    }
-    @media (max-width: 600px) {
-      button {
-        width: 100%;
-      }
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Mágica do Anel – Física</title>
+
+<style>
+html,body{
+  margin:0;
+  width:100%;
+  height:100%;
+  background:black;
+  overflow:hidden;
+  touch-action:none;
+}
+
+#stage{
+  width:100vw;
+  height:100vh;
+  position:relative;
+}
+
+#anel{
+  width:100px;
+  height:100px;
+  position:absolute;
+  display:none;
+  background:url("ring.png") no-repeat center;
+  background-size:contain;
+  filter:drop-shadow(0 0 25px gold);
+  pointer-events:none;
+}
+
+#hint{
+  position:absolute;
+  bottom:20px;
+  width:100%;
+  text-align:center;
+  color:#888;
+  font-family:Arial, sans-serif;
+  font-size:14px;
+}
+
+#fullscreenBtn{
+  position:fixed;
+  top:15px;
+  right:15px;
+  padding:10px 14px;
+  background:rgba(255,255,255,0.15);
+  color:white;
+  border:1px solid rgba(255,255,255,0.3);
+  border-radius:8px;
+  font-size:13px;
+  z-index:999;
+}
+</style>
 </head>
+
 <body>
+<div id="stage">
+  <audio id="som" src="magica.mp3" preload="auto"></audio>
+  <div id="anel"></div>
+  <div id="hint">Incline o celular • Arraste para a direita</div>
+</div>
 
-  <h1>Teste de Botões Interativos</h1>
+<button id="fullscreenBtn">Tela cheia</button>
 
-  <button class="azul" onclick="mostrarMensagem('Você clicou no botão Azul!')">Botão Azul</button>
-  <button class="verde" onclick="mostrarMensagem('Você clicou no botão Verde!')">Botão Verde</button>
-  <button class="vermelho" onclick="mudarFundo()">Mudar Cor de Fundo</button>
+<script>
+const stage = document.getElementById("stage");
+const anel = document.getElementById("anel");
+const som = document.getElementById("som");
+const fsBtn = document.getElementById("fullscreenBtn");
 
-  <div id="mensagem"></div>
+let ativo = false;
+let segurando = false;
 
-  <script>
-    function mostrarMensagem(texto) {
-      document.getElementById('mensagem').textContent = texto;
-    }
+let pos = { x: window.innerWidth/2, y: window.innerHeight/3 };
+let vel = { x: 0, y: 0 };
+let gravidade = 0.4;
+let inclinacaoX = 0;
 
-    function mudarFundo() {
-      const cores = ['#f2f2f2', '#ffeaa7', '#dfe6e9', '#fab1a0'];
-      const corAtual = document.body.style.backgroundColor;
-      let novaCor = cores[Math.floor(Math.random() * cores.length)];
-      while (novaCor === corAtual) {
-        novaCor = cores[Math.floor(Math.random() * cores.length)];
-      }
-      document.body.style.backgroundColor = novaCor;
-    }
-  </script>
+function mostrar(x,y){
+  anel.style.display = "block";
+  pos.x = x;
+  pos.y = y;
+  vel.x = 0;
+  vel.y = 0;
+  ativo = true;
+}
 
+function render(){
+  const w = anel.offsetWidth;
+  const h = anel.offsetHeight;
+  anel.style.left = (pos.x - w/2) + "px";
+  anel.style.top  = (pos.y - h/2) + "px";
+}
+
+function saiu(){
+  return pos.x - 50 > window.innerWidth || pos.y - 50 > window.innerHeight;
+}
+
+function desaparecer(){
+  som.currentTime = 0;
+  som.play();
+  anel.style.display = "none";
+  ativo = false;
+}
+
+function fisica(){
+  if(!ativo || segurando) return;
+
+  vel.y += gravidade;        // queda
+  vel.x += inclinacaoX * 0.6; // inclinação
+
+  vel.x *= 0.99; // atrito ar
+  vel.y *= 0.99;
+
+  pos.x += vel.x;
+  pos.y += vel.y;
+
+  render();
+
+  if(saiu()){
+    desaparecer();
+    return;
+  }
+
+  requestAnimationFrame(fisica);
+}
+
+/* SENSOR DE INCLINAÇÃO */
+window.addEventListener("deviceorientation", e => {
+  if(e.gamma !== null){
+    inclinacaoX = e.gamma / 45; // -1 a 1
+  }
+});
+
+/* TOUCH */
+stage.addEventListener("touchstart",e=>{
+  e.preventDefault();
+  const t = e.touches[0];
+  segurando = true;
+  mostrar(t.clientX,t.clientY);
+},{passive:false});
+
+stage.addEventListener("touchmove",e=>{
+  e.preventDefault();
+  if(!ativo || !segurando) return;
+  const t = e.touches[0];
+  pos.x = t.clientX;
+  pos.y = t.clientY;
+  render();
+},{passive:false});
+
+stage.addEventListener("touchend",()=>{
+  segurando = false;
+  requestAnimationFrame(fisica);
+});
+
+/* MOUSE (fallback) */
+stage.addEventListener("mousedown",e=>{
+  segurando = true;
+  mostrar(e.clientX,e.clientY);
+});
+
+stage.addEventListener("mousemove",e=>{
+  if(!ativo || !segurando) return;
+  pos.x = e.clientX;
+  pos.y = e.clientY;
+  render();
+});
+
+document.addEventListener("mouseup",()=>{
+  segurando = false;
+  requestAnimationFrame(fisica);
+});
+
+/* 🔲 TELA CHEIA */
+fsBtn.addEventListener("click",()=>{
+  const el = document.documentElement;
+  if(el.requestFullscreen) el.requestFullscreen();
+  else if(el.webkitRequestFullscreen) el.webkitRequestFullscreen();
+  fsBtn.style.display = "none";
+});
+</script>
 </body>
 </html>
